--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootswatch": "^4.6.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
