--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-learning-1",
+  "name": "way-of-samurai",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://ludagladush.github.io/react-way-of-samurai/",
